# ArknightsUID

./: .gitignore  README.md  pyproject.toml
ArknightsUID/: __init__.py  version.py
ArknightsUID/arknightsuid_ann/: __init__.py  draw_img.py  get_data.py  model.py
ArknightsUID/arknightsuid_ap/: __init__.py  ap_text.py  draw_ap_card.py  notice.py  test.py  utils.py
ArknightsUID/arknightsuid_charsnapshot/: __init__.py  const.py  get_char_snapshot.py
ArknightsUID/arknightsuid_config/: __init__.py  ark_config.py  config_default.py  set_config.py
ArknightsUID/arknightsuid_gacha/: __init__.py  draw_gacha_image.py  gacha.py  texture2D.7z  uid_data.json
ArknightsUID/arknightsuid_gacha/service/: gachaLogic.py  gachaTrigger.py  gacha_detail_table.json  gacha_table.json  models.py  poolGenerator.py
ArknightsUID/arknightsuid_help/: Help.json  __init__.py  get_help.py
ArknightsUID/arknightsuid_login/: __init__.py  constant.py  login.py  model.py
ArknightsUID/arknightsuid_mind/: __init__.py
ArknightsUID/arknightsuid_resource/: __init__.py  cachedata.py  constants.py  memoryStore.py
ArknightsUID/arknightsuid_roleinfo/: __init__.py  draw_roleinfo_card.py
ArknightsUID/arknightsuid_server_bot/: __init__.py  ak.py
ArknightsUID/arknightsuid_server_update_check/: __init__.py  apk_monitor.py  arknights_monitor.py
ArknightsUID/arknightsuid_signin/: __init__.py  sign.py
ArknightsUID/arknightsuid_start/: __init__.py  start.py
ArknightsUID/arknightsuid_user/: __init__.py  deal_skd_cred.py
ArknightsUID/arknightsuid_wiki/: __init__.py  draw_wiki_img.py
ArknightsUID/arkuid_utils/skd/: models.py
ArknightsUID/utils/: ark_api.py  ark_prefix.py  crypto.py  download.py  error_reply.py  file.py  image.py  message.py
ArknightsUID/utils/api/skd/: api.py  request.py
ArknightsUID/utils/database/: models.py  startup.py
ArknightsUID/utils/fonts/: source_han_sans.py  source_han_serif.py
ArknightsUID/utils/image/: image_tools.py
ArknightsUID/utils/models/: common.py
ArknightsUID/utils/models/gamedata/: ActivityTable.py  AudioData.py  BattleEquipTable.py  BuildingData.py  CampaignTable.py  ChapterTable.py  CharMetaTable.py  CharPatchTable.py  CharacterTable.py  CharmTable.py  CharwordTable.py  CheckinTable.py  ClimbTowerTable.py  ClueData.py  CrisisTable.py  CrisisV2Table.py  DisplayMetaTable.py  EnemyHandbookTable.py  FavorTable.py  GachaTable.py  GamedataConst.py  HandbookInfoTable.py  HandbookTable.py  HandbookTeamTable.py  ItemTable.py  MedalTable.py  MissionTable.py  OpenServerTable.py  PlayerAvatarTable.py  RangeTable.py  ReplicateTable.py  RetroTable.py  RoguelikeTable.py  RoguelikeTopicTable.py  SandboxPermTable.py  SandboxTable.py  ShopClientTable.py  SkillTable.py  SkinTable.py  StageTable.py  (+10 more)
ArknightsUID/utils/models/skland/: models.py
ArknightsUID/utils/resource/: RESOURCE_PATH.py  download_all_resource.py  download_from_cos.py  download_url.py  resource_map.json
