[project]
name = "ArknightsUID"
version = "0.0.1"
description = ""
authors = [
    {name = "qwerdvd", email = "2450899274@qq.com"}
]
dependencies = [
    "msgspec>=0.17.0",
    "pydantic>=2.1.1",
    "fastapi>=0.100.1",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.282",
    "black>=23.7.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.black]
line-length = 108
target-version = ["py38"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 108
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
