[project]
name = "ArknightsUID"
version = "0.0.1"
description = ""
authors = [
    {name = "qwerdvd", email = "2450899274@qq.com"}
]
dependencies = [
    "msgspec>=0.19.0",
    "pydantic>=2.10.6",
    "fastapi>=0.115.11",
    "cryptography>=44.0.2",
    "torappu-excel>=0.1.2"
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
gscore_auto_update_dep = ["torappu-excel>=0.1.1"]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.9.9",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  "I",     # isort
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
